smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/invalid-trait-textblock-key.smithy
// Syntax error at line 6, column 11: Expected RPAREN(')') but found COLON(':') | Model
namespace smithy.example

@externalDocumentation(
    """
    Foo""": "bar")
string MyString
